test/files/neg/t9286a.check
t9286a.scala:6: error: name clash between defined and inherited member:
def foo(o: (String,)): Unit in class T and
private def foo(o: (Any,)): Unit at line 6
have same type after erasure: (o: Tuple1)Unit
   private def foo(o: Tuple1[Any]) = ()
               ^
one error found
